@@ -163,7 +163,8 @@ Chronological list of authors
   - Estefania Barreto-Ojeda
   - Paarth Thadani
   - Henry Kobin
-  
+  - Kosuke Kudo
+
 External code
 -------------
 
